# iops-parallel-machine-scheduling

./: .gitignore  README.md  best_result.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-tests.yml
docs/: solvers.md
src/: cli.py  fine_tuning_benchmark.py  main.py
src/assignments/: assignment3_job_shop.py  assignment4_p_median.py  iops-hackathon-3-giustacchini-kutny.py  iops-nsga-spea-giustacchini-kutny.py  iops-roa-giustacchini-kutny.py
src/local_search/: __init__.py  operators.py
src/minizinc_cp/: __init__.py  scheduling.mzn  solver.py
src/models/: __init__.py  instance.py  solution.py
src/solvers/: __init__.py  aco_base.py  ant_colony_system.py  ant_multi_tour_system.py  ant_system.py  base.py  combined.py  cooling.py  evolution_strategy.py  genetic_algorithm.py  grasp.py  iterated_local_search.py  max_min_ant_system.py  simulated_annealing.py
src/stopping_criteria/: __init__.py  criteria.py
tests/: conftest.py  test_combined_solver.py  test_instance.py  test_local_search.py  test_solution.py  test_solvers.py  test_stopping_criteria.py
