[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iops"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov",
]
minizinc = [
    "minizinc>=0.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--verbose --cov=src --cov-report=term-missing"
pythonpath = ["src"]
